using UnityEngine;

namespace My2DGame
{
    /// <summary>
    /// 애니메이션 파라미터 문자열 정의 클래스
    /// </summary>
    public class AnimationString
    {
        public static string IsMove = "IsMove";
        public static string IsRun = "IsRun";
        public static string IsGrounded = "IsGrounded";
    }
}
